--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </div>
             <div id="mainListDiv" class="main_list">
                 <ul class="navlinks">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Reservatuion</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#offer">Menu</a></li>
+                    <li><a href="#menu">Reservatuion</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
 
                     <div class="social-icons">
                         <ul>
@@ -52,7 +52,7 @@
         </div>
     </nav>
 
-    <section class="banner">
+    <section id="home" class="banner">
         <div class="banner-content">
             <img src="./images/Vector-Smart-Object1.png" alt="Your Image" class="banner-image">
             <h1 class="premium">Premium</h1>
@@ -71,7 +71,7 @@
 
 
 
-    <section class="offer">
+    <section id="offer" class="offer">
         <div class="offer-hd">
             <h2>What We Can Offer</h2>
             <div class="divider-content">
@@ -115,7 +115,7 @@
 
 
 
-    <section class="restaurant-section">
+    <section id="about" class="restaurant-section" >
         <div class="restaurant">
 
             <div class="rest-img"></div>
@@ -132,7 +132,7 @@
 
 
         </div>
-        <section class="owner-section">
+        <section id="menu" class="owner-section">
             <div class="owner">
                 <div class="chef">
                     <h1>&</h1>
